<resources>
    <string name="app_name">Aitama</string>
    <string name="settings">Settings</string>
    <string name="portfolio">Portfolio</string>
    <string name="total">Total</string>
    <string name="performance">Performance</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="positions">Current Positions</string>
    <string name="market_value">Market value:</string>
    <string name="asset_amount">%1$s pcs.</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="history">History</string>
    <string name="assets">%1$s Assets</string>
    <string name="stocks">%1$s Stocks</string>
    <string name="cryptos">%1$s Cryptos</string>
    <string name="asset_name">%1$s (%2$s)</string>
    <string name="current_price">Current Price (%1$s):</string>
    <string name="investment">Investment:</string>
    <string name="asset_recommendation">Asset recommendation:</string>
    <string name="x">x</string>
    <string name="credits">Allowance:</string>
    <string name="remaining">Remaining:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enable_allowance_label">Enable Allowance</string>
    <string name="current_allowance_label">Current Allowance:</string>
    <string name="remaining_allowance_label">Remaining Allowance:</string>
    <string name="set_allowance_label">Set Allowance:</string>
    <string name="symbol">Symbol:</string>
    <string name="amount">Amount</string>
    <string name="portfolio_weight">Portfolio weight:</string>
    <string name="round_bracket_open">(</string>
    <string name="round_bracket_close">)</string>
    <string name="at_symbol">\@</string>
    <string name="average_purchase_price">Average purchase price:</string>
</resources>