<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.aitama.viewmodel.AllowanceViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AllowanceFragment">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/allowance_switch"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:checked="@={viewModel.allowanceSwitch}"
            android:text="@string/enable_allowance_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/allowance_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/allowance_switch">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/current_allowance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/current_allowance_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/remaining_allowance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/remaining_allowance_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/current_allowance_label" />

                <TextView
                    android:id="@+id/set_allowance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/set_allowance_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/remaining_allowance_label" />

                <EditText
                    android:id="@+id/set_allowance_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:text="@={viewModel.amountEditText}"
                    android:textAlignment="viewEnd"
                    app:layout_constraintBaseline_toBaselineOf="@+id/set_allowance_label"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/remaining_allowance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:dollarFormattedDoubleString="@{viewModel.remainingAllowance}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/remaining_allowance_label"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/current_allowance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:dollarFormattedDoubleString="@{viewModel.currentAllowance}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/current_allowance_label"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/confirm_allowance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:enabled="false"
                    android:text="@string/confirm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/set_allowance_edit_text" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>